# Sprites-Editor

./: CMakeLists.txt  auto_push.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h  pakreader.cpp  pakreader.h  spritemodel.cpp  spritemodel.h
